Fix header overflow
Hide vertical navigator overflow so no scroll appears at top

--- a/meggiestyle.css
+++ b/meggiestyle.css
@@ -55,6 +55,7 @@ div {
 	z-index: 1000;
 	border-bottom: 3px solid #999;
 	height: 300px;
+	overflow-y: hidden;
 }
 
 #homepage .navigator {
